@@ -14,6 +14,7 @@ Bugs fixed:
 - 2825365 class provider crashing on 64 bit machines
 - 2823219 doHttpRequest Segfault when Protocol field is NULL
 - 2827800 SfcbBroker Library crashes in Local mode communication
+- 2825221 No validation for PersistenceType property 
 
 Changes in 1.3.4
 ================
